--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
                                 <span class="tooltip">
                                     <div class="tooltip-title">Git Email</div>
                                     The email address associated with commits for this account. Should match your GitHub/GitLab account email.
-                                    <div class="tooltip-example">Example: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="ef85808781af8a978e829f838ac18c8082">[email&#160;protected]</a></div>
+                                    <div class="tooltip-example">Example: john@example.com</div>
                                 </span>
                             </span>
                     </label>
@@ -680,7 +680,7 @@
     <div id="output"></div>
 </div>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+<script>
     let accountIndex = 1;
 
     function addAccount() {
